# GameOfLifeC

./: CMakeLists.txt  CellTest.c  Makefile  README.md  RulesTest.c  arguments.c  arguments.h  cell.c  cell.h  generation.c  generation.h  loading.c  loading.h  main.c  neighbourhood.c  neighbourhood.h  rules.c  rules.h  saving.c  saving.h  saving_png.c  saving_png.h  saving_txt.c  saving_txt.h
test/: const.txt  dakota.txt  glider.txt  glider_gun.txt  wink.txt
